# open-investing

./: .dir-locals.el  .gitignore  .projectile  environment.yml  pyproject.toml
notes/: 20230914021014-algorithmic_trading.md  20230914021014-algorithmic_trading.org  20230922172026-decisions.org  decisions.md  investing.md  investing.org  main.md
notes/islr/ex/: 2.8.org  test.org  test.py
notes/numpy/: axis.org
notes/pandas/: axis.org  cross_tab.org  index.org  pivot_table.org
notes/rl/: frozen-lake.org  frozen-lake.py  policy-gradient.org  policy-gradient.py  test.py
setup/: setup.org
src/open_investing/app/: after_django.py  base_app.py  market_event.py  task_app.py  test_app.py
src/open_investing/backtesting/: design.org
src/open_investing/client_adapter/: market_event.py  startup.py
src/open_investing/config/: base.py  task.py
src/open_investing/const/: code_name.py  const.py
src/open_investing/dashboard/: manage.py
src/open_investing/data_manager/: const.py  mixin.py
src/open_investing/event_spec/: event_spec.py
src/open_investing/exception/: exception.py
src/open_investing/exchange/: const.py  exchange_api.py  store.py
src/open_investing/indicator/: apps.py  models.py
src/open_investing/locator/: service_locator.py
src/open_investing/market_event/: market_event.py
src/open_investing/order/: apps.py  order_event_broker.py  order_service.py  quote_event_broker.py
src/open_investing/price/: money.py  money_field.py
src/open_investing/runner/: trade.py
src/open_investing/security/: apps.py  derivative_code.py  models.py  (+3 more)
(+134 files in other folders)
